--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+backend/node_modules/
+backend/jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -49,7 +49,7 @@ web_modules/
 *.tsbuildinfo
 
 # Optional npm cache directory
-.npm
+backend/.npm
 
 # Optional eslint cache
 .eslintcache
