Primeiras funcionalidades do backend

--- a/.gitignore
+++ b/.gitignore
@@ -119,8 +119,10 @@ dist
 # TernJS port file
 .tern-port
 
-# Stores VSCode versions used for testing VSCode extensions
+# Vscode configs
 .vscode-test
+.vscode/
+
 
 # yarn v2
 .yarn/cache
@@ -128,3 +130,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
